--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<html><body>HELLO WORLD </body></html>
+ <!DOCTYPE html>
+ <html lang="en">
+ 	<head>
+ 	<script src="script.js"></script>
+ 	<link rel="stylesheet" type="text/css" href="styles.css">
+ 	<link href="https://fonts.googleapis.com/css?family=Muli|Questrial" rel="stylesheet">
+ 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+ 	</head>
+ 		<title>
+ 			Federico
+ 		</title>
+ 	<body>
+ 		<h1 id="name">
+ 			Federico Firoozi
+ 		</h1>
+ 		<div class="tabBar">
+	 		<button class="mainTab" id="openFirst" onclick="openTab(event, 'abtme')" >About Me</button>
+	 		<button class="mainTab" onclick="openTab(event, 'acad')">Academics</button>
+	 		<button class="mainTab" onclick="openTab(event, 'tut')">Tutoring</button>
+	 		<button class="mainTab" onclick="openTab(event, 'cont')">Contact</button>
+	 	</div>
+	 	<div class="tabBox">
+			<div id="abtme" class="tabPage">
+			 	<h3>About Me</h3>
+			 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna nisi, rutrum sed aliquam eu, egestas in nulla. Ut metus nisl, luctus non faucibus ut, varius at orci. Nulla facilisi. Nulla at pulvinar quam. Donec cursus enim quis sem condimentum tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis lectus purus, eu cursus metus pellentesque sed. Praesent tristique condimentum quam vel fringilla. Cras varius nibh sit amet placerat semper. Vestibulum at interdum quam. Phasellus mollis fringilla est.
+
+			 	Nullam dictum tortor erat, at tempor nisi fermentum nec. Vestibulum blandit cursus fermentum. Integer congue convallis erat, at ultrices dui dignissim vel. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean placerat, urna at volutpat suscipit, neque odio accumsan nibh, laoreet tempor nibh massa vitae sem. Mauris velit felis, imperdiet eget dui pellentesque, bibendum vulputate eros. Praesent varius turpis vel congue consectetur. Ut posuere tempus turpis, ut rutrum quam venenatis at. Phasellus nec elit vehicula, porta dolor ut, mattis ipsum. Nulla at ex magna. In porttitor nisl eros, vel consectetur lacus bibendum nec. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur facilisis arcu, in porttitor ipsum imperdiet non.</p>
+		 	</div>
+		 	<div id="acad" class="tabPage">
+			 	<h3>Academics and Qualifications</h3>
+			 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna nisi, rutrum sed aliquam eu, egestas in nulla. Ut metus nisl, luctus non faucibus ut, varius at orci. Nulla facilisi. Nulla at pulvinar quam. Donec cursus enim quis sem condimentum tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis lectus purus, eu cursus metus pellentesque sed. Praesent tristique condimentum quam vel fringilla. Cras varius nibh sit amet placerat semper. Vestibulum at interdum quam. Phasellus mollis fringilla est.
+
+			 	Nullam dictum tortor erat, at tempor nisi fermentum nec. Vestibulum blandit cursus fermentum. Integer congue convallis erat, at ultrices dui dignissim vel. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean placerat, urna at volutpat suscipit, neque odio accumsan nibh, laoreet tempor nibh massa vitae sem. Mauris velit felis, imperdiet eget dui pellentesque, bibendum vulputate eros. Praesent varius turpis vel congue consectetur. Ut posuere tempus turpis, ut rutrum quam venenatis at. Phasellus nec elit vehicula, porta dolor ut, mattis ipsum. Nulla at ex magna. In porttitor nisl eros, vel consectetur lacus bibendum nec. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur facilisis arcu, in porttitor ipsum imperdiet non.</p>
+		 	</div>
+		 	<div id="tut" class="tabPage">
+			 	<h3>Tutoring</h3>
+			 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna nisi, rutrum sed aliquam eu, egestas in nulla. Ut metus nisl, luctus non faucibus ut, varius at orci. Nulla facilisi. Nulla at pulvinar quam. Donec cursus enim quis sem condimentum tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis lectus purus, eu cursus metus pellentesque sed. Praesent tristique condimentum quam vel fringilla. Cras varius nibh sit amet placerat semper. Vestibulum at interdum quam. Phasellus mollis fringilla est.
+
+			 	Nullam dictum tortor erat, at tempor nisi fermentum nec. Vestibulum blandit cursus fermentum. Integer congue convallis erat, at ultrices dui dignissim vel. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean placerat, urna at volutpat suscipit, neque odio accumsan nibh, laoreet tempor nibh massa vitae sem. Mauris velit felis, imperdiet eget dui pellentesque, bibendum vulputate eros. Praesent varius turpis vel congue consectetur. Ut posuere tempus turpis, ut rutrum quam venenatis at. Phasellus nec elit vehicula, porta dolor ut, mattis ipsum. Nulla at ex magna. In porttitor nisl eros, vel consectetur lacus bibendum nec. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur facilisis arcu, in porttitor ipsum imperdiet non.</p>
+		 	</div>
+		 	<div id="cont" class="tabPage">
+			 	<h3>Contact</h3>
+			 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna nisi, rutrum sed aliquam eu, egestas in nulla. Ut metus nisl, luctus non faucibus ut, varius at orci. Nulla facilisi. Nulla at pulvinar quam. Donec cursus enim quis sem condimentum tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis lectus purus, eu cursus metus pellentesque sed. Praesent tristique condimentum quam vel fringilla. Cras varius nibh sit amet placerat semper. Vestibulum at interdum quam. Phasellus mollis fringilla est.
+
+			 	Nullam dictum tortor erat, at tempor nisi fermentum nec. Vestibulum blandit cursus fermentum. Integer congue convallis erat, at ultrices dui dignissim vel. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean placerat, urna at volutpat suscipit, neque odio accumsan nibh, laoreet tempor nibh massa vitae sem. Mauris velit felis, imperdiet eget dui pellentesque, bibendum vulputate eros. Praesent varius turpis vel congue consectetur. Ut posuere tempus turpis, ut rutrum quam venenatis at. Phasellus nec elit vehicula, porta dolor ut, mattis ipsum. Nulla at ex magna. In porttitor nisl eros, vel consectetur lacus bibendum nec. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur facilisis arcu, in porttitor ipsum imperdiet non.</p>
+		 	</div>
+	 	</div>
+ 	</body>
+ 	<script>document.getElementById("openFirst").click();</script>
+ </html>
