--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	 	<div class="tabBox">
 			<div id="abtme" class="tabPage">
 			 	<h3>About Me</h3>
-			 	<p>Hi! My name is <span class="bolded">Federico</span> 
+			 	<p>Hi! My name is <span class="bolded">Federico</span>. 
 			 	<br>
 			 	I am a student at the <span class="bolded">University of Waterloo</span> studying math and physics, and I have just finished my second year of study. I have a passion for learning new concepts in these areas, and also have an interest in learning new applicable skills, such as fixing bikes and appliances, coding, and music.<br><br>
 			 	I like to lead an active lifestyle, and I much enjoy outdoor activities such as biking, hiking, and climbing rocks.<br><br>
-			 	I fluently speak three languages: English, Italian, and Farsi (Persian)<br><br>
-			 	Since I have a passion for undertainding math and physics concepts, I have also developed a strong interest in teaching these concepts to students and helping them succeed. More information on this can be found on my website's <span class="intLink"  onclick=document.getElementById("tab4").click()>Tutoring</span> tab.
+			 	I fluently speak three languages: English, Italian, and Farsi (Persian).<br><br>
+			 	Since I have a passion for understanding math and physics concepts, I have also developed a strong interest in teaching these concepts to students and helping them succeed. More information on this can be found on my website's <span class="intLink"  onclick=document.getElementById("tab4").click()>Tutoring</span> tab.
 
 
 			 	<br />
@@ -49,15 +49,16 @@
 		 	</div>
 			<div id="exp" class="tabPage">
 			 	<h3>Experience and Qualifications</h3>
-			 	<p>Throughout my journey in inpiring students to pursue their math education, I have had some experiences that have further developed my skills in teaching.<br><br>
+			 	<p>Throughout my journey in inpiring students to pursue their math education, I have had some experiences that have further developed my skills in teaching, as well as strengthened my interpersonal skills.<br><br>
 
 			 	<span class="bolded">Operations Lead and Online Tutor</span> at 360 Education Labs (Kitchener, Ontario)<br><br>
-
+			 	
+			 	
 			 	<span class="bolded">Usher</span> at the Michael J. Fox Theatre (Burnaby, B.C.)<br><br>
 
 			 	<span class="bolded">Private Tutor</span><br><br>
 
-			 	<span class="bolded">Physics Club</span> at Burnaby South Secondary School
+			 	<span class="bolded">President of the Physics Club</span> at Burnaby South Secondary School
 			 	</p>
 		 	</div>
 		 	<div id="tut" class="tabPage">
@@ -66,13 +67,13 @@
 			 	<br>
 			 	I currently offer tutoring in: <span class="bolded">Lower Mainland, B.C.</span><br>
 			 	<br>
-			 	My rates are.<br>
+			 	My rates are:<br>
 			 	<br>
 			 	One-on-one tutoring:<br>
 			 	$25/hour-$30/hour
 			 	<br><br>
 			 	Group sessions:<br>
-			 	$5/hour-$20/hour<br>
+			 	$10/hour-$20/hour<br>
 			 	<br>
 			 	The subjects I offer are:<br>
 			 	<br>
@@ -84,12 +85,16 @@
 			 	High School Level:<br>
 			 	Calculus and AP Calculus<br>
 			 	Math 8 to 12<br>
-
+			 	<br><br>
+			 	Note that my rates are dependent on course, session length, and number of group members (if any). For an exact quote feel free to contact me on my <span class="intLink"  onclick=document.getElementById("tab5").click()>Contact</span> tab.
+			 	</p>
 
 		 	</div>
 		 	<div id="cont" class="tabPage">
 			 	<h3>Contact</h3>
-			 	<p>Want to contact me? Feel free to reach out!</p>
+			 	<p>Want to contact me? Feel free to reach out!<br><br>
+			 	<a href = https://www.facebook.com/federico.firoozi target="_blank"><img src="images/fb.png" alt="Facebook" height="50" width="50"></a>
+			 	<a href = https://www.linkedin.com/in/federicofiroozi/ target="_blank"><img src="images/in.png" alt="LinkedIn" height="50" width="50"></a></</p>
 		 	</div>
 	 	</div>
  	</body>
