--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 		 	</div>
 		 	<div id="acad" class="tabPage">
 			 	<h3>Academics</h3>
-			 	<p>I am a student currently enrolled at the <span class="bolded">University of Waterloo</span> in Honours Mathematics, on the road to declaring my major in <span class="bolded">Mathematical Physics</span>.
-			 	<br>
+			 	<p>I am currently an undergraduate student at the <span class="bolded">University of Waterloo</span>, majoring in <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Mathematical-Physics target="_blank">Mathematical Physics</a> and <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Pure-Mathematics target="_blank">Pure Mathematics</a>.
+			 	<br><br />
 			 	I have been on the <a href=https://uwaterloo.ca/math/current-undergraduates/funding-and-awards/deans-honours-list target="_blank">Term Dean's Honours List</a> for all of my school terms so far.
 			 	<br /><br />
 			 	Outside of school, I have also participated in academically enlightening experiences, and also have had much experience inpiring students to learn.
@@ -68,7 +68,7 @@
 
 			 	<span class="bolded">Private Tutor</span><br><br>
 
-			 	<span class="bolded">President of the Physics Club</span> at Burnaby South Secondary School
+			 	<span class="bolded">President of the Physics Club</span> at Burnaby South Secondary School (Burnaby, B.C.)
 			 	</p>
 		 	</div>
 		 	<div id="tut" class="tabPage">
@@ -83,7 +83,7 @@
 			 	$25/hour-$30/hour
 			 	<br><br>
 			 	Group sessions:<br>
-			 	$10/hour-$20/hour<br>
+			 	$10/hour/person-$20/hour/person<br>
 			 	<br>
 			 	The subjects I offer are:<br>
 			 	<br>
@@ -94,7 +94,9 @@
 <br><br>
 			 	High School Level:<br>
 			 	Calculus and AP Calculus<br>
-			 	Math 8 to 12<br>
+			 	Precalculus<br>
+			 	Math Foundations<br>
+			 	Physics<br>
 			 	<br><br>
 			 	Note that my rates are dependent on course, session length, and number of group members (if any). For an exact quote feel free to contact me on my <span class="intLink"  onclick=document.getElementById("tab5").click()>Contact</span> tab.
 			 	</p>
