--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			 	<h3>About Me</h3>
 			 	<p>Hi! My name is <span class="bolded">Federico</span>. 
 			 	<br>
-			 	I am a student at the <span class="bolded">University of Waterloo</span> studying math and physics, and I have just finished my second year of study. I have a passion for learning new concepts in these areas, and also have an interest in learning new applicable skills, such as fixing bikes and appliances, coding, and music.<br><br>
-			 	I like to lead an active lifestyle, and I much enjoy outdoor activities such as biking, hiking, and climbing rocks.<br><br>
+			 	I am an undergraduate student at the <span class="bolded">University of Waterloo</span> studying math and physics. I have a passion for learning new concepts in these areas, and also have an interest in learning new applicable skills, such as fixing bikes and appliances, coding, and music.<br><br>
+			 	I like to lead an active lifestyle, and I much enjoy outdoor activities such as biking, hiking, camping, and climbing rocks.<br><br>
 			 	I fluently speak three languages: English, Italian, and Farsi (Persian).<br><br>
 			 	Since I have a passion for understanding math and physics concepts, I have also developed a strong interest in teaching these concepts to students and helping them succeed. More information on this can be found on my website's <span class="intLink"  onclick=document.getElementById("tab4").click()>Tutoring</span> tab.
 
@@ -50,8 +50,8 @@
 			 	<br><br />
 			 	I have been on the <a href=https://uwaterloo.ca/math/current-undergraduates/funding-and-awards/deans-honours-list target="_blank">Term Dean's Honours List</a> for all of my school terms so far.
 			 	<br /><br />
-			 	Outside of school, I have also participated in academically enlightening experiences, and also have had much experience inpiring students to learn.
-			 	<br>
+			 	Outside of school, I have also participated in a some interesting summer camps.
+			 	<br><br>
 			 	Academic extracurricular schools I've attended:<br>
 			 	<a href=http://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists target="_blank">ISSYP</a> at the <span class="bolded">Perimeter insitute for Theoretical Physics</span><br>
 			 	<a href=https://uwaterloo.ca/institute-for-quantum-computing/programs/quantum-cryptography-school-young-students target="_blank">QCSYS</a> at the <span class="bolded">Institute for Quantum Computing</span><br>
@@ -73,9 +73,9 @@
 		 	</div>
 		 	<div id="tut" class="tabPage">
 			 	<h3>Tutoring</h3>
-			 	<p>From my own passion in understanding concepts in math and physics, I have always been trying to help other students succeed. I find great joy in inspiring students to develop an interest in and possibly pursue mathematics. Math concepts are so strongly interlinked that any gaps in a student's understanding will hinder them greatly. As a tutor, it is my job to find those gaps and try to fill them, so that the student may succeed with their coursework and exams.<br>
+			 	<p>From my own passion in understanding concepts in math and physics, I have always been trying to help other students succeed. I find great joy in inspiring students to develop an interest in and possibly pursue mathematics and physics. Math concepts are so strongly interlinked that any gaps in a student's understanding will hinder them greatly. As a tutor, it is my job to find those gaps and try to fill them, so that the student may succeed with their coursework and exams.<br>
 			 	<br>
-			 	I currently offer tutoring in: <span class="bolded">Lower Mainland, B.C.</span><br>
+			 	I currently offer tutoring in: <span class="bolded">Waterloo, Ontario</span><br>
 			 	<br>
 			 	My rates are:<br>
 			 	<br>
@@ -104,9 +104,12 @@
 		 	</div>
 		 	<div id="cont" class="tabPage">
 			 	<h3>Contact</h3>
-			 	<p>Want to contact me? Feel free to reach out!<br><br>
-			 	<a href = https://www.facebook.com/federico.firoozi target="_blank"><img src="images/fb.png" alt="Facebook" height="50" width="50"></a>
-			 	<a href = https://www.linkedin.com/in/federicofiroozi/ target="_blank"><img src="images/in.png" alt="LinkedIn" height="50" width="50"></a></</p>
+			 	<p>Want to contact me? Don't hesitate to reach out!<br><br>
+			 	<a href = https://www.facebook.com/federico.firoozi target="_blank"><img src="images/fb2.png" alt="Facebook" height="75" width="75"></a>
+			 	<a href = https://www.linkedin.com/in/federicofiroozi/ target="_blank"><img src="images/in2.png" alt="LinkedIn" height="75" width="75"></a>
+			 	<a href="mailto:federico.firoozi@uwaterloo.ca"><img src="images/m2.png" height="75" width="75"></a>
+			 	
+			 		<br></br> <span class="bolded">Email</span>: federico.firoozi@uwaterloo.ca</p>
 		 	</div>
 	 	</div>
  	</body>
