--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 			 	<h3>About Me</h3>
 			 	<p>Hi! My name is <span class="bolded">Federico</span>. 
 			 	<br>
-			 	I am an undergraduate student at the <span class="bolded">University of Waterloo</span> studying math and physics. I have a passion for learning new concepts in these areas, and also have an interest in learning new applicable skills, such as fixing bikes and appliances, coding, and music.<br><br>
-			 	I like to lead an active lifestyle, and I much enjoy outdoor activities such as biking, hiking, camping, and climbing rocks.<br><br>
+			 	I am a recent graduate from the <span class="bolded">University of Waterloo</span>, where I majored in Pure Mathematics and Applied Mathematics with a Specialization in Physics. I have such a passion for learning math that I decided to go for round two and enroll in a Masters of Science at <span class="bolded">Simon Fraser University</span>, studying Combinatorics. I also enjoy learning new applicable skills, such as fixing bikes and cars, learning to code, and playing music.<br><br>
+			 	I spend a lot of my time outside doing activities such as biking, hiking, camping, and rock climbing.<br><br>
 			 	I fluently speak three languages: English, Italian, and Farsi (Persian).<br><br>
-			 	Since I have a passion for understanding math and physics concepts, I have also developed a strong interest in teaching these concepts to students and helping them succeed. More information on this can be found on my website's <span class="intLink"  onclick=document.getElementById("tab4").click()>Tutoring</span> tab.
+			 	I like math and physics so much that I can't help but want to teach others about it every chance I get, and so I often tutor students in those subject and helping them succeed with their courses. More information on this can be found in the <span class="intLink"  onclick=document.getElementById("tab4").click()>Tutoring</span> tab.
 
 
 			 	<br />
@@ -46,9 +46,11 @@
 		 	</div>
 		 	<div id="acad" class="tabPage">
 			 	<h3>Academics</h3>
-			 	<p>I am currently an undergraduate student at the <span class="bolded">University of Waterloo</span>, majoring in <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Mathematical-Physics target="_blank">Mathematical Physics</a> and <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Pure-Mathematics target="_blank">Pure Mathematics</a>.
-			 	<br><br />
-			 	I have been on the <a href=https://uwaterloo.ca/math/current-undergraduates/funding-and-awards/deans-honours-list target="_blank">Term Dean's Honours List</a> for all of my school terms so far.
+			 	<p>
+			 	I am currently a Master's student in the <a https://www.sfu.ca/math/graduate.html target="_blank">Department of Mathematics</a> at <span class="bolded">Simon Fraser University</span> studying <span class="bolded">Combinatorics</span> under the supervision of Professor <a http://people.math.sfu.ca/~jed/ target="_blank">Jonathan Jedwab</a>.
+			 	<br><br>
+			 	I completed my undergraduate degree at <span class="bolded">University of Waterloo</span>, majoring in <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Pure-Mathematics target="_blank">Pure Mathematics</a> and <a https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Degree-Requirements-Applied-Mathematics target="_blank">Applied Mathematics</a> with a <a https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Physics-Specialization target="_blank">Specialization in Physics</a>.
+			 	I have graduated with distinction.
 			 	<br /><br />
 			 	Outside of school, I have also participated in a some interesting summer camps.
 			 	<br><br>
@@ -59,46 +61,52 @@
 		 	</div>
 			<div id="exp" class="tabPage">
 			 	<h3>Experience and Qualifications</h3>
-			 	<p>Throughout my journey in inpiring students to pursue their math education, I have had some experiences that have further developed my skills in teaching, as well as strengthened my interpersonal skills.<br><br>
+			 	<p>Here is a list of some of the experiences I've had or am currently involved in, both in following my own mathematical pursuits and also in inpiring students to succeed in their mathematicsl journeys<br><br>
+
+			 	<span class="bolded">Graduate Mathematics TA: Tutor and Marker</span> for the Math Department at Simon Fraser University (Burnaby, B.C.)<br><br>
+
+			 	<span class="bolded">Undergraduate Researcher</span> in Combinatorics at Simon Fraser University (Burnaby, B.C.)<br><br>
+
+			 	<span class="bolded">Undergraduate Mathematics TA: Tutor and Marker</span> for the Math Department at the University of Waterloo (Waterloo, Ontario)<br><br>
 
 			 	<span class="bolded">Operations Lead and Online Tutor</span> at 360 Education Labs (Kitchener, Ontario)<br><br>
 			 	
-			 	
 			 	<span class="bolded">Usher</span> at the Michael J. Fox Theatre (Burnaby, B.C.)<br><br>
 
-			 	<span class="bolded">Private Tutor</span><br><br>
+			 	<span class="bolded">Private Tutor</span> (Wherever I happened to be at the moment, Canada)<br><br>
 
 			 	<span class="bolded">President of the Physics Club</span> at Burnaby South Secondary School (Burnaby, B.C.)
 			 	</p>
 		 	</div>
 		 	<div id="tut" class="tabPage">
 			 	<h3>Tutoring</h3>
-			 	<p>From my own passion in understanding concepts in math and physics, I have always been trying to help other students succeed. I find great joy in inspiring students to develop an interest in and possibly pursue mathematics and physics. Math concepts are so strongly interlinked that any gaps in a student's understanding will hinder them greatly. As a tutor, it is my job to find those gaps and try to fill them, so that the student may succeed with their coursework and exams.<br>
+			 	<p>I have always been trying to help other students succeed in math and physics, since I think they are such amazing topics. These topics are often so poorly covered in high school that students never develop a good foundation for solving the kinds of problems that arise in these courses. I love inspiring students to develop an interest in mathematics and physics.<br>
 			 	<br>
-			 	I currently offer tutoring in: <span class="bolded">Waterloo, Ontario</span><br>
+			 	I currently offer tutoring in: <span class="bolded"> The Lower Mainland</span><br> region of British Columbia
 			 	<br>
 			 	My rates are:<br>
 			 	<br>
 			 	One-on-one tutoring:<br>
-			 	$25/hour-$30/hour
+			 	$45
 			 	<br><br>
 			 	Group sessions:<br>
-			 	$10/hour/person-$20/hour/person<br>
+			 	$15/hour/person-$30/hour/person<br>
 			 	<br>
-			 	The subjects I offer are:<br>
+			 	The subjects I tutor are:<br>
 			 	<br>
 			 	University Level:<br>
 			 	Calculus 1, 2, and 3<br>
-			 	Physics 1<br>
-			 	Algebra 1<br>
-<br><br>
+			 	Physics 1 and 2<br>
+			 	Linear Algebra 1 and 2
+			 	Proofs
+			 	<br><br>
 			 	High School Level:<br>
 			 	Calculus and AP Calculus<br>
 			 	Precalculus<br>
 			 	Math Foundations<br>
 			 	Physics<br>
 			 	<br><br>
-			 	Note that my rates are dependent on course, session length, and number of group members (if any). For an exact quote feel free to contact me on my <span class="intLink"  onclick=document.getElementById("tab5").click()>Contact</span> tab.
+			 	Note that my rates are dependent on course, session length, and number of group members (if any). For an exact quote feel free to <span class="intLink"  onclick=document.getElementById("tab5").click()>contact</span> me.
 			 	</p>
 
 		 	</div>
