--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 		 	<div id="acad" class="tabPage">
 			 	<h3>Academics</h3>
 			 	<p>
-			 	I am currently a Master's student in the <a https://www.sfu.ca/math/graduate.html target="_blank">Department of Mathematics</a> at <span class="bolded">Simon Fraser University</span> studying <span class="bolded">Combinatorics</span> under the supervision of Professor <a http://people.math.sfu.ca/~jed/ target="_blank">Jonathan Jedwab</a>.
+			 	I am currently a Master's student in the <a href=https://www.sfu.ca/math/graduate.html target="_blank">Department of Mathematics</a> at <span class="bolded">Simon Fraser University</span> studying <span class="bolded">Combinatorics</span> under the supervision of Professor <a href=http://people.math.sfu.ca/~jed/ target="_blank">Jonathan Jedwab</a>.
 			 	<br><br>
-			 	I completed my undergraduate degree at <span class="bolded">University of Waterloo</span>, majoring in <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Pure-Mathematics target="_blank">Pure Mathematics</a> and <a https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Degree-Requirements-Applied-Mathematics target="_blank">Applied Mathematics</a> with a <a https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Physics-Specialization target="_blank">Specialization in Physics</a>.
+			 	I completed my undergraduate degree at <span class="bolded">University of Waterloo</span>, majoring in <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-Pure-Mathematics target="_blank">Pure Mathematics</a> and <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Degree-Requirements-Applied-Mathematics target="_blank">Applied Mathematics</a> with a <a href=https://ugradcalendar.uwaterloo.ca/page/MATH-AM-Physics-Specialization target="_blank">Specialization in Physics</a>.
 			 	I have graduated with distinction.
 			 	<br /><br />
 			 	Outside of school, I have also participated in a some interesting summer camps.
@@ -73,7 +73,7 @@
 			 	
 			 	<span class="bolded">Usher</span> at the Michael J. Fox Theatre (Burnaby, B.C.)<br><br>
 
-			 	<span class="bolded">Private Tutor</span> (Wherever I happened to be at the moment, Canada)<br><br>
+			 	<span class="bolded">Private Tutor</span> (wherever I happened to be at the moment, Canada)<br><br>
 
 			 	<span class="bolded">President of the Physics Club</span> at Burnaby South Secondary School (Burnaby, B.C.)
 			 	</p>
